--- a/index.html
+++ b/index.html
@@ -5,6 +5,98 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <nav class="header__menu">
+        <ul class="header__menu-list">
+          <li class="header__menu-item header__menu-link-activ">
+            <a class="menu-link">главная</a>
+          </li>
+          <li class="header__menu-item">
+            <a class="menu-link" href="#0">посмотреть лоты</a>
+          </li>
+          <li class="header__menu-item">
+            <a class="menu-link" href="#0">об аукционе</a></li>
+        </ul>
+      </nav>
+      <a class="header__logo"><img class="header__logo-image" src="./images/logo-black.svg" alt="Логотип проекта"></a>
+      <address class="contacts">
+        <ul class="contacts__list">
+          <li>
+            <a class="menu-link" href="tel:99995555555">+9 999 555 5555</a>
+          </li>
+          <li>
+            <a class="menu-link" href="mailto:">info@sobaka.ge</a>
+          </li>
+          <li>
+            <p class="menu-link">наб. Принсенграхт 263- 265, Амстердам</p>
+          </li>
+        </ul>
+      </address>
+    </header>
+    <main>
+      <section class="cover">
+        <div class="overlay"></div>
+        <h1 class="cover-title">
+          <span class="cover__title-item text-left">оно</span>
+          <span class="cover__title-item text-center">тебе</span>
+          <span class="cover__title-item text-right">надо</span>
+        </h1>
+        <div class="description">
+          <p class="cover__description-slogan"></p>
+          <button class="cover__description-start"></button>
+        </div>
+      </section>
+      <section class="lots">
+        <h2 class="lots-title"></h2>
+        <ul class="lots-list">
+          <li class="lots-card-movie">
+            <a>
+              <article></article>
+            </a>
+          </li>
+          <li class="lots-card-book">
+            <a>
+              <article></article>
+            </a>
+          </li>
+          <li class="lots-card-painting">
+            <a>
+              <article></article>
+            </a>
+          </li>
+        </ul>
+        <a class="link-full-list"></a>
+      </section>
+      <section class="about">
+        <div class="about-logo">
+
+        </div >
+        <div class="about-list">
+          <h2 class="about__list-title">          
+          </h2>
+          <p class="about__list-main"></p>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <address class="contacts"></address>
+      <nav class="footer-nav"></nav>
+      <ul>
+        <li>
+          <a></a>
+        </li>
+        <li>
+          <a></a>
+        </li>
+        <li>
+          <a></a>
+        </li>
+      </ul>
+    </footer>
+  </body>
 </html>
