--- a/index.html
+++ b/index.html
@@ -13,18 +13,24 @@
     <header class="header">
       <nav class="header__menu">
         <ul class="header__menu-list">
-          <li class="header__menu-item header__menu-link-activ">
-            <a class="menu-link">главная</a>
+          <li class="header__menu-item menu-link-activ">
+            <a class="menu-link menu-link-activ">главная</a>
           </li>
           <li class="header__menu-item">
-            <a class="menu-link" href="#0">посмотреть лоты</a>
+            <a class="menu-link-shift menu-link" href="#0">посмотреть лоты</a>
           </li>
           <li class="header__menu-item">
-            <a class="menu-link" href="#0">об аукционе</a></li>
+            <a class="menu-link-shift menu-link" href="#0">об аукционе</a>
+          </li>
         </ul>
       </nav>
-      <a class="header__logo"><img class="header__logo-image" src="./images/logo-black.svg" alt="Логотип проекта"></a>
-      <address class="contacts">
+      <a class="header__logo"
+        ><img
+          class="header__logo-image"
+          src="./images/logo-black.svg"
+          alt="Логотип проекта"
+      /></a>
+      <address class="header__contacts contacts">
         <ul class="contacts__list">
           <li>
             <a class="menu-link" href="tel:99995555555">+9 999 555 5555</a>
@@ -33,7 +39,9 @@
             <a class="menu-link" href="mailto:">info@sobaka.ge</a>
           </li>
           <li>
-            <p class="menu-link">наб. Принсенграхт 263- 265, Амстердам</p>
+            <p class="menu-link menu-link-activ">
+              наб. Принсенграхт 263- 265, Амстердам
+            </p>
           </li>
         </ul>
       </address>
@@ -42,59 +50,155 @@
       <section class="cover">
         <div class="overlay"></div>
         <h1 class="cover-title">
-          <span class="cover__title-item text-left">оно</span>
-          <span class="cover__title-item text-center">тебе</span>
-          <span class="cover__title-item text-right">надо</span>
+          <span class="cover__title-item text-left"
+            >он<span class="none_letter-spacing">о</span></span
+          >
+          <span class="cover__title-item text-center"
+            >теб<span class="none_letter-spacing">е</span></span
+          >
+          <span class="cover__title-item text-right"
+            >над<span class="none_letter-spacing">о</span></span
+          >
         </h1>
         <div class="description">
-          <p class="cover__description-slogan"></p>
-          <button class="cover__description-start"></button>
+          <p class="cover__description-slogan">
+            Аукцион вещей,<span class="cover__description__slogan-selection">
+              в которые никто не верил</span
+            >
+          </p>
+          <button class="cover__description-start">Сделать ставку</button>
         </div>
       </section>
       <section class="lots">
-        <h2 class="lots-title"></h2>
+        <h2 class="lots-title">Лоты</h2>
         <ul class="lots-list">
-          <li class="lots-card-movie">
-            <a>
-              <article></article>
+          <li class="lots__card lots-card-movie">
+            <a class="card-link">
+              <div class="overlay"></div>
+              <article class="card">
+                <h3 class="card__title">
+                  Фильм режиссёра, который бросил киношколу
+                </h3>
+                <p class="card__item">
+                  Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                  ставка, если бы вы не знали, что режиссёр — Пол Томас
+                  Андерсон?
+                </p>
+              </article>
             </a>
           </li>
-          <li class="lots-card-book">
-            <a>
-              <article></article>
+          <li class="lots__card lots-card-book">
+            <a class="card-link">
+              <div class="overlay"></div>
+              <article class="card">
+                <h3 class="card__title">
+                  Книга, где описан один скучный день из жизни рекламного агента
+                </h3>
+                <p class="card__item">
+                  Объёмом почти в тысячу страниц. Иногда без знаков препинания и
+                  с переходами на древнеанглийский. В ней одновременно
+                  рассказывается о 16 июня 1904 года и об истории литературы,
+                  начиная с античных времён. И это всё накладывается на
+                  эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
+                  Джеймса Джойса?
+                </p>
+              </article>
             </a>
           </li>
-          <li class="lots-card-painting">
-            <a>
-              <article></article>
+          <li class="lots__card lots-card-painting">
+            <a class="card-link">
+              <div class="overlay"></div>
+              <article class="card">
+                <h3 class="card__title">
+                  Картина, которую повторит даже 5-летний сын маминой подруги
+                </h3>
+                <p class="card__item">
+                  Ну действительно, там линия, тут кружочек, а здесь и вовсе
+                  что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+                  котиков... Сколько бы вы на такое поставили, если бы не знали,
+                  что это — одна из революционных работ Кандинского?
+                </p>
+              </article>
             </a>
           </li>
         </ul>
-        <a class="link-full-list"></a>
+        <a class="link-full-list">посмотреть больше</a>
       </section>
       <section class="about">
         <div class="about-logo">
-
-        </div >
-        <div class="about-list">
-          <h2 class="about__list-title">          
-          </h2>
-          <p class="about__list-main"></p>
+          <img
+            class="about__logo-img"
+            src="./images/logo-white.svg"
+            alt="Логотип"
+          />
+        </div>
+        <h2 class="about__list-title">Об аукционе</h2>
+        <div class="about__list-main">
+          <p class="about__list-item">
+            Здесь вы не встретите очередное пафосное собрание невероятно
+            дорогого антиквариата. Наши лоты вообще не должны были попасть ни на
+            один аукцион. Потому что кому нужен дневник девочки-подростка или
+            картина, которую может нарисовать даже ребёнок? Кому нужны все эти
+            странные вещи, созданные любителями?
+          </p>
+          <p>
+            Слишком сложные или, наоборот, слишком простые. Опережающие своё
+            время. В пух и прах растерзанные критиками. Непринятые и непонятые.
+            Когда-то они казались просто неудачными. Но, несмотря на критику,
+            кажущуюся простоту или сложность, сейчас без этих лотов невозможно
+            представить современную культуру. Когда в эти вещи не верил никто,
+            продолжали верить их создатели. И сейчас эти лоты стали культовыми.
+          </p>
         </div>
       </section>
     </main>
     <footer class="footer">
-      <address class="contacts"></address>
-      <nav class="footer-nav"></nav>
-      <ul>
-        <li>
-          <a></a>
+      <address class="footer__contacts contacts">
+        <ul class="contacts__list">
+          <li>
+            <a class="menu-link" href="tel:99995555555">+9 999 555 5555</a>
+          </li>
+          <li>
+            <a class="menu-link" href="mailto:">info@sobaka.ge</a>
+          </li>
+          <li>
+            <p class="menu-link menu-link-activ">
+              наб. Принсенграхт 263-265, Амстердам
+            </p>
+          </li>
+        </ul>
+      </address>
+      <nav class="footer-nav">
+        <ul class="footer-nav__list">
+          <li class="menu-link-activ">
+            <a class="menu-link menu-link-activ">главная</a>
+          </li>
+          <li>
+            <a class="menu-link">посмотреть лоты</a>
+          </li>
+          <li>
+            <a class="menu-link">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <ul class="footer__social-list">
+        <li class="footer__social-item">
+          <a class="footer__social-link"
+            ><img class="footer__social-icon" src="./images/yt.svg" alt=""
+          /></a>
         </li>
         <li>
-          <a></a>
+          <a class="footer__social-link"
+            ><img class="footer__social-icon" src="./images/vk.svg" alt=""
+          /></a>
         </li>
         <li>
-          <a></a>
+          <a class="footer__social-link"
+            ><img
+              class="footer__social-icon"
+              src="./images/pinterest.svg"
+              alt=""
+          /></a>
         </li>
       </ul>
     </footer>
