--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           </li>
         </ul>
       </nav>
-      <a class="header__logo"
+      <a class="header__logo" href="#0"
         ><img
           class="header__logo-image"
           src="./images/logo-black.svg"
@@ -40,7 +40,7 @@
           </li>
           <li>
             <p class="menu-link menu-link-activ">
-              наб. Принсенграхт 263- 265, Амстердам
+              наб. Принсенграхт 263-<br />265, Амстердам
             </p>
           </li>
         </ul>
@@ -73,7 +73,7 @@
         <h2 class="lots-title">Лоты</h2>
         <ul class="lots-list">
           <li class="lots__card lots-card-movie">
-            <a class="card-link">
+            <a class="card-link"  href="#0">
               <div class="overlay"></div>
               <article class="card">
                 <h3 class="card__title">
@@ -88,7 +88,7 @@
             </a>
           </li>
           <li class="lots__card lots-card-book">
-            <a class="card-link">
+            <a class="card-link" href="#0">
               <div class="overlay"></div>
               <article class="card">
                 <h3 class="card__title">
@@ -106,7 +106,7 @@
             </a>
           </li>
           <li class="lots__card lots-card-painting">
-            <a class="card-link">
+            <a class="card-link"  href="#0">
               <div class="overlay"></div>
               <article class="card">
                 <h3 class="card__title">
@@ -122,7 +122,7 @@
             </a>
           </li>
         </ul>
-        <a class="link-full-list">посмотреть больше</a>
+        <a class="link-full-list"  href="#0">посмотреть больше</a>
       </section>
       <section class="about">
         <div class="about-logo">
@@ -163,7 +163,7 @@
           </li>
           <li>
             <p class="menu-link menu-link-activ">
-              наб. Принсенграхт 263-265, Амстердам
+              наб. Принсенграхт 263-265,<br /> Амстердам
             </p>
           </li>
         </ul>
@@ -174,26 +174,26 @@
             <a class="menu-link menu-link-activ">главная</a>
           </li>
           <li>
-            <a class="menu-link">посмотреть лоты</a>
+            <a class="menu-link"  href="#0">посмотреть лоты</a>
           </li>
           <li>
-            <a class="menu-link">об аукционе</a>
+            <a class="menu-link"  href="#0">об аукционе</a>
           </li>
         </ul>
       </nav>
       <ul class="footer__social-list">
         <li class="footer__social-item">
-          <a class="footer__social-link"
+          <a class="footer__social-link"  href="#0"
             ><img class="footer__social-icon" src="./images/yt.svg" alt=""
           /></a>
         </li>
         <li>
-          <a class="footer__social-link"
+          <a class="footer__social-link"  href="#0"
             ><img class="footer__social-icon" src="./images/vk.svg" alt=""
           /></a>
         </li>
         <li>
-          <a class="footer__social-link"
+          <a class="footer__social-link" href="#0"
             ><img
               class="footer__social-icon"
               src="./images/pinterest.svg"
