--- a/index.html
+++ b/index.html
@@ -184,12 +184,12 @@
       <ul class="footer__social-list">
         <li class="footer__social-item">
           <a class="footer__social-link"  href="#0"
-            ><img class="footer__social-icon" src="./images/yt.svg" alt=""
+            ><img class="footer__social-icon" src="./images/yt.svg" alt="Ссылка на Youtube"
           /></a>
         </li>
         <li>
           <a class="footer__social-link"  href="#0"
-            ><img class="footer__social-icon" src="./images/vk.svg" alt=""
+            ><img class="footer__social-icon" src="./images/vk.svg" alt="Ссылка на VK"
           /></a>
         </li>
         <li>
@@ -197,7 +197,7 @@
             ><img
               class="footer__social-icon"
               src="./images/pinterest.svg"
-              alt=""
+              alt="Ссылка на Pinterest"
           /></a>
         </li>
       </ul>
