Исправление после ревью

--- a/index.html
+++ b/index.html
@@ -11,35 +11,35 @@
   </head>
   <body>
     <header class="header">
-      <nav class="header__menu">
+      <nav>
         <ul class="header__menu-list">
-          <li class="header__menu-item menu-link-activ">
-            <a class="menu-link menu-link-activ">главная</a>
+          <li class="header__menu-item none-list-style">
+            <a">главная</a>
           </li>
           <li class="header__menu-item">
-            <a class="menu-link-shift menu-link" href="#0">посмотреть лоты</a>
+            <a class="underline menu-link-shift" href="#0">посмотреть лоты</a>
           </li>
           <li class="header__menu-item">
-            <a class="menu-link-shift menu-link" href="#0">об аукционе</a>
+            <a class="underline menu-link-shift" href="#0">об аукционе</a>
           </li>
         </ul>
       </nav>
-      <a class="header__logo" href="#0"
-        ><img
+      <a class="header__logo">
+        <img
           class="header__logo-image"
           src="./images/logo-black.svg"
-          alt="Логотип проекта"
-      /></a>
+          alt="Логотип проекта"/>
+      </a>
       <address class="header__contacts contacts">
-        <ul class="contacts__list">
+        <ul class="none-list-style">
           <li>
-            <a class="menu-link" href="tel:99995555555">+9 999 555 5555</a>
+            <a class="underline" href="tel:99995555555">+9 999 555 5555</a>
           </li>
           <li>
-            <a class="menu-link" href="mailto:">info@sobaka.ge</a>
+            <a class="underline" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
           </li>
           <li>
-            <p class="menu-link menu-link-activ">
+            <p>
               наб. Принсенграхт 263-<br />265, Амстердам
             </p>
           </li>
@@ -66,12 +66,12 @@
               в которые никто не верил</span
             >
           </p>
-          <button class="cover__description-start">Сделать ставку</button>
+          <button class="cover__description-start" type="button">Сделать ставку</button>
         </div>
       </section>
       <section class="lots">
         <h2 class="lots-title">Лоты</h2>
-        <ul class="lots-list">
+        <ul class="lots-list none-list-style">
           <li class="lots__card lots-card-movie">
             <a class="card-link"  href="#0">
               <div class="overlay"></div>
@@ -134,7 +134,7 @@
         </div>
         <h2 class="about__list-title">Об аукционе</h2>
         <div class="about__list-main">
-          <p class="about__list-item">
+          <p>
             Здесь вы не встретите очередное пафосное собрание невероятно
             дорогого антиквариата. Наши лоты вообще не должны были попасть ни на
             один аукцион. Потому что кому нужен дневник девочки-подростка или
@@ -153,47 +153,51 @@
       </section>
     </main>
     <footer class="footer">
-      <address class="footer__contacts contacts">
-        <ul class="contacts__list">
+      <address class="contacts">
+        <ul class="none-list-style">
           <li>
-            <a class="menu-link" href="tel:99995555555">+9 999 555 5555</a>
+            <a class="underline" href="tel:99995555555">+9 999 555 5555</a>
           </li>
           <li>
-            <a class="menu-link" href="mailto:">info@sobaka.ge</a>
+            <a class="underline" href="mailto:">info@sobaka.ge</a>
           </li>
           <li>
-            <p class="menu-link menu-link-activ">
+            <p>
               наб. Принсенграхт 263-265,<br /> Амстердам
             </p>
           </li>
         </ul>
       </address>
       <nav class="footer-nav">
-        <ul class="footer-nav__list">
-          <li class="menu-link-activ">
-            <a class="menu-link menu-link-activ">главная</a>
+        <ul class="none-list-style">
+          <li>
+            <a>главная</a>
           </li>
           <li>
-            <a class="menu-link"  href="#0">посмотреть лоты</a>
+            <a class="underline"  href="#0">посмотреть лоты</a>
           </li>
           <li>
-            <a class="menu-link"  href="#0">об аукционе</a>
+            <a class="underline"  href="#0">об аукционе</a>
           </li>
         </ul>
       </nav>
-      <ul class="footer__social-list">
-        <li class="footer__social-item">
-          <a class="footer__social-link"  href="#0"
-            ><img class="footer__social-icon" src="./images/yt.svg" alt="Ссылка на Youtube"
+      <ul class="footer__social-list none-list-style">
+        <li>
+          <a href="#0" target="_blank"
+            ><img class="footer__social-icon" 
+            src="./images/yt.svg" 
+            alt="Ссылка на Youtube"
           /></a>
         </li>
         <li>
-          <a class="footer__social-link"  href="#0"
-            ><img class="footer__social-icon" src="./images/vk.svg" alt="Ссылка на VK"
+          <a href="#0" target="_blank"
+            ><img class="footer__social-icon" 
+            src="./images/vk.svg" 
+            alt="Ссылка на VK"
           /></a>
         </li>
         <li>
-          <a class="footer__social-link" href="#0"
+          <a href="#0" target="_blank"
             ><img
               class="footer__social-icon"
               src="./images/pinterest.svg"
