Исправление после ревью

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <nav>
         <ul class="header__menu-list">
           <li class="header__menu-item none-list-style">
-            <a">главная</a>
+            <a>главная</a>
           </li>
           <li class="header__menu-item">
             <a class="underline menu-link-shift" href="#0">посмотреть лоты</a>
