--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             <a>главная</a>
           </li>
           <li class="header__menu-item">
-            <a class="underline menu-link-shift" href="#0">посмотреть лоты</a>
+            <a class="monotonous-link menu-link-shift" href="#0">посмотреть лоты</a>
           </li>
           <li class="header__menu-item">
-            <a class="underline menu-link-shift" href="#0">об аукционе</a>
+            <a class="monotonous-link menu-link-shift" href="#0">об аукционе</a>
           </li>
         </ul>
       </nav>
@@ -28,20 +28,19 @@
         <img
           class="header__logo-image"
           src="./images/logo-black.svg"
-          alt="Логотип проекта"/>
+          alt="Логотип проекта"
+        />
       </a>
       <address class="header__contacts contacts">
         <ul class="none-list-style">
           <li>
-            <a class="underline" href="tel:99995555555">+9 999 555 5555</a>
+            <a class="monotonous-link" href="tel:99995555555">+9 999 555 5555</a>
           </li>
           <li>
-            <a class="underline" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+            <a class="monotonous-link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
           </li>
           <li>
-            <p>
-              наб. Принсенграхт 263-<br />265, Амстердам
-            </p>
+            <p>наб. Принсенграхт 263-<br />265, Амстердам</p>
           </li>
         </ul>
       </address>
@@ -66,14 +65,16 @@
               в которые никто не верил</span
             >
           </p>
-          <button class="cover__description-start" type="button">Сделать ставку</button>
+          <button class="cover__description-start" type="button">
+            Сделать ставку
+          </button>
         </div>
       </section>
       <section class="lots">
         <h2 class="lots-title">Лоты</h2>
         <ul class="lots-list none-list-style">
           <li class="lots__card lots-card-movie">
-            <a class="card-link"  href="#0">
+            <a class="card-link" href="#0">
               <div class="overlay"></div>
               <article class="card">
                 <h3 class="card__title">
@@ -106,7 +107,7 @@
             </a>
           </li>
           <li class="lots__card lots-card-painting">
-            <a class="card-link"  href="#0">
+            <a class="card-link" href="#0">
               <div class="overlay"></div>
               <article class="card">
                 <h3 class="card__title">
@@ -122,7 +123,7 @@
             </a>
           </li>
         </ul>
-        <a class="link-full-list"  href="#0">посмотреть больше</a>
+        <a class="link-full-list" href="#0">посмотреть больше</a>
       </section>
       <section class="about">
         <div class="about-logo">
@@ -156,14 +157,15 @@
       <address class="contacts">
         <ul class="none-list-style">
           <li>
-            <a class="underline" href="tel:99995555555">+9 999 555 5555</a>
+            <a class="monotonous-link" href="tel:99995555555">+9 999 555 5555</a>
           </li>
           <li>
-            <a class="underline" href="mailto:">info@sobaka.ge</a>
+            <a class="monotonous-link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
           </li>
           <li>
             <p>
-              наб. Принсенграхт 263-265,<br /> Амстердам
+              наб. Принсенграхт 263-265,<br />
+              Амстердам
             </p>
           </li>
         </ul>
@@ -174,26 +176,28 @@
             <a>главная</a>
           </li>
           <li>
-            <a class="underline"  href="#0">посмотреть лоты</a>
+            <a class="monotonous-link" href="#0">посмотреть лоты</a>
           </li>
           <li>
-            <a class="underline"  href="#0">об аукционе</a>
+            <a class="monotonous-link" href="#0">об аукционе</a>
           </li>
         </ul>
       </nav>
       <ul class="footer__social-list none-list-style">
         <li>
           <a href="#0" target="_blank"
-            ><img class="footer__social-icon" 
-            src="./images/yt.svg" 
-            alt="Ссылка на Youtube"
+            ><img
+              class="footer__social-icon"
+              src="./images/yt.svg"
+              alt="Ссылка на Youtube"
           /></a>
         </li>
         <li>
           <a href="#0" target="_blank"
-            ><img class="footer__social-icon" 
-            src="./images/vk.svg" 
-            alt="Ссылка на VK"
+            ><img
+              class="footer__social-icon"
+              src="./images/vk.svg"
+              alt="Ссылка на VK"
           /></a>
         </li>
         <li>
